Fix for clipped descenders in feature headings

--- a/content/css/docs.css
+++ b/content/css/docs.css
@@ -117,6 +117,7 @@ body {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  line-height: normal;
 }
 
 .feature-item .fa {
